# Harser

./: .gitignore  Char.hs  Examples.hs  Harser.cabal  Parser.hs  README.md  Test.hs  harser.cabal  main.hs  test.csv
Examples/: CSV.hs  CalcInterpreter.hs  CalcWithVars.hs  Calculator.hs  Json.hs  Lang.hs  SimpleAST.hs  SimpleGrammar.hs  example.json
Examples/Lang/: Data.hs  Grammar.hs  Lang.hs  Lexer.hs  State.hs  grammar.txt
Harser/: Char.hs  Combinators.hs  Lang.hs  Parser.hs  State.hs  Stream.hs  Testing.hs  Utilities.hs
Tests/: Combinators.hs  Parser.hs  TestTools.hs  Utilities.hs
