cabal-version:       2.2


name:                Harser
version:             0.1.0.0
synopsis:            (H)askell P(arser) Framework
description:         A parsing framework that very closely mimics Text.Parsec
license:             MIT
license-file:        LICENSE
author:              Rose: https://github.com/Xenovia02
category:            Parsing
build-type:          Simple
extra-source-files:  README.md


common exts
    other-extensions:
        FlexibleContexts,
        FunctionalDependencies,
        FlexibleInstances,
        FlexibleContexts


common deps
    build-depends:
        base,
        text
    default-language:
        Haskell2010


common oth-mods
    other-modules:
        Harser.Char,
        Harser.Combinators,
        Harser.Parser,
        Harser.Stream,
        Harser.Testing,
        Harser.Utilities


library
    import:
        exts,
        deps
    exposed-modules:
        Harser.Char,
        Harser.Combinators,
        Harser.Parser,
        Harser.Stream,
        Harser.Testing,
        Harser.Utilities


executable Examples
    import:
        exts,
        deps,
        oth-mods
    main-is:
        Examples.hs
    other-modules:
        Examples.Calculator,
        Examples.CalcWithVars
    build-depends:
        containers


executable Test
    import:
        exts,
        deps,
        oth-mods
    main-is:
        Test.hs
