cabal-version: 2.2


-- package information
name:               harser
version:            0.1.0.0
synopsis:           (H)askell P(arsing) Framework
description:        this is a placeholder description
author:             Rose<https://github.com/Xenovia02>
maintainer:         Rose<https://github.com/Xenovia02>
category:           Parsing
license:            MIT
license-file:       LICENSE
extra-source-files: README.md

-- build information
build-type:         Simple
-- jobs:               $ncpu


common exts
    other-extensions:
        FlexibleContexts,
        FunctionalDependencies,
        FlexibleInstances,
        FlexibleContexts


common deps
    build-depends:
        base == 4.*,
        text
    default-language:
        Haskell2010


common oth-mods
    other-modules:
        Harser.Char,
        Harser.Combinators,
        Harser.Parser,
        Harser.State,
        Harser.Stream,
        Harser.Testing,
        Harser.Utilities


common opts
    ghc-options:
        -Wall
        -- -Werror
        -Wextra
        -fhide-source-paths
        -freverse-errors


-- source-repository head
--     type:
--         git
--     location:
--         https://github.com/Xenovia02/Harser


library
    import:
        exts,
        deps,
        opts
    exposed-modules:
        Harser.Char,
        Harser.Combinators,
        Harser.Parser,
        Harser.Testing,
        Harser.Utilities
    other-modules:
        Harser.State,
        Harser.Stream
    ghc-options:
        -O3


executable Examples
    import:
        exts,
        deps,
        oth-mods,
        opts
    main-is:
        Examples.hs
    other-modules:
        Examples.Calculator,
        Examples.CalcWithVars,
        Examples.Json
        Examples.Lang.Data
        Examples.Lang.Grammar
        Examples.Lang.Lang
        Examples.Lang.State
    build-depends:
        containers


executable Test
    import:
        exts,
        deps,
        oth-mods,
        opts
    main-is:
        Test.hs
